# dcbikeshare-download

./: .gitignore  downloader.ipynb
dcbikeshare_downloader/: README.md  pyproject.toml
dcbikeshare_downloader/src/downloader/: __init__.py  downloader.py
